--- a/templates/inventory.j2
+++ b/templates/inventory.j2
@@ -1,14 +1,9 @@
-[admin-host]
-host00 ansible_host={{ terraform.outputs.admin_host.value }}
+host01 ansible_host={{ terraform_output.outputs.ceph_host.value[0] }}
+host02 ansible_host={{ terraform_output.outputs.ceph_host.value[1] }}
+host03 ansible_host={{ terraform_output.outputs.ceph_host.value[2] }}
+[admin]
+host00 ansible_host={{ terraform_output.outputs.admin_host.value }}
 
-[ceph-hosts]
-host01 ansible_host={{ terraform.outputs.ceph_host.value[0] }}
-host02 ansible_host={{ terraform.outputs.ceph_host.value[1] }}
-host03 ansible_host={{ terraform.outputs.ceph_host.value[2] }}
 
-[ceph:children]
-admin-host
-ceph-hosts
-
-[ceph:vars]
+[all:vars]
 ansible_user=cloud-user
